# AI-Stack_YouTube_Automation

ai-stack-automation/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
ai-stack-automation/config/: __init__.py  settings.py
ai-stack-automation/modules/: __init__.py  script_generator.py  storyboard_generator.py  thumbnail_generator.py  uploader.py  video_creator.py  voice_generator.py  web_app.py
ai-stack-automation/prompts/: script_prompt.txt
ai-stack-automation/web/: app.js  index.html  styles.css
